<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shared Data plan</string>
    <string name="hello_world">Hello world!</string>

    <string name="ngrok_string">http://7f67eb70.ngrok.io</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
<string name="btnRegister">Register</string>

    <string name="checkboxwifi">Wifi</string>
    <string name="radio4G">4G</string>
    <string name="radio3G">3G</string>
    <string name="radio2G">2G</string>
    <string name="button_manage_tab">Network Preferences</string>


    <string name="txt_reset_password">Reset your Password</string>

    <string name="txt_email_forgetpwd">Enter your Email Id</string>
    <string name="btn_reset_forgetpassword">Reset</string>
    <string name="btn_backtologin_forgetpassword">Back to Login</string>


</resources>